--- a/components/leaderboard/Leaderboard.module.css
+++ b/components/leaderboard/Leaderboard.module.css
@@ -227,7 +227,8 @@
   display: none;
 }
 
-@media only screen and (max-width: 760px), (pointer: coarse) and (max-width: 900px) {
+@media only screen and (max-width: 760px),
+  (pointer: coarse) and (max-width: 900px) {
   .networkHeader {
     gap: 1rem;
   }
@@ -473,6 +474,7 @@
 }
 .disabled {
   color: rgb(154, 154, 154);
+  text-decoration: none;
 }
 .disabled:hover {
   color: white;
@@ -678,7 +680,8 @@
   white-space: nowrap;
   width: 100%;
 }
-.contentDropdownItem:hover, .contentDropdownItem:focus {
+.contentDropdownItem:hover,
+.contentDropdownItem:focus {
   background-color: rgb(51, 51, 51) !important;
   color: white;
 }
@@ -690,14 +693,6 @@
   cursor: pointer;
   font: inherit;
   padding: 0;
-}
-
-.disabled {
-  color: rgb(154, 154, 154);
-  text-decoration: none;
-}
-.disabled:hover {
-  color: white;
 }
 
 .museumToggle {
@@ -754,7 +749,12 @@
   padding: 15px 20px;
   min-width: 360px;
   color: white;
-  box-shadow: 0.5px 0.5px 3px 0px rgba(255, 255, 255, 0.02), 1px 3px 6px 0px rgba(0, 0, 0, 0.15), -0.5px -1px 3px 0px rgba(255, 255, 255, 0.02), -3px -3px 5px 0px rgba(255, 255, 255, 0.02) inset, 6px 3px 6px 0px rgba(0, 0, 0, 0.4) inset;
+  box-shadow:
+    0.5px 0.5px 3px 0px rgba(255, 255, 255, 0.02),
+    1px 3px 6px 0px rgba(0, 0, 0, 0.15),
+    -0.5px -1px 3px 0px rgba(255, 255, 255, 0.02),
+    -3px -3px 5px 0px rgba(255, 255, 255, 0.02) inset,
+    6px 3px 6px 0px rgba(0, 0, 0, 0.4) inset;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
